updating docker bind volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 8004:8000
     command: uvicorn main:app --host 0.0.0.0 --reload
     volumes:
-      - C:\Users\shobh\Desktop\side_project\celery_task\app:/usr/src/app
+      - ./app:/usr/src/app
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
@@ -22,7 +22,7 @@ services:
     build: ./app
     command: celery -A worker.celery worker --loglevel=info --logfile=logs/celery.log --concurrency=2
     volumes:
-      - C:\Users\shobh\Desktop\side_project\celery_task\app:/usr/src/app
+      - ./app:/usr/src/app
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
