--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,35 +3,13 @@ version: '3.8'
 services:
 
   redis:
-    image: redis:7
-
-  web:
-    build: ./app
+    image: redis:6.2
+    container_name: redis
     ports:
-      - 8004:8000
-    command: uvicorn main:app --host 0.0.0.0 --reload
-    volumes:
-      - ./app:/usr/src/app
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-    depends_on:
-      - redis
-
-  worker:
-    build: ./app
-    command: celery -A worker.celery worker --loglevel=info --logfile=logs/celery.log --concurrency=2
-    volumes:
-      - ./app:/usr/src/app
-    environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/0
-    depends_on:
-      - web
-      - redis
-
+      - "6379:6379"
+  
   dashboard:
-    build: ./app
+    build: .
     command: celery --broker=redis://redis:6379/0 flower --port=5555
     ports:
       - 5556:5555
@@ -39,6 +17,5 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
-      - web
       - redis
-      - worker
+      - celery
